--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-target/
-.idea/
-
+*/target/
+# Compiled class file
 *.class
 
+#log file
+*.log
+
+# BlueJ files
+*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -10,40 +14,13 @@ target/
 # Package Files #
 *.jar
 *.war
+*.nar
 *.ear
+*.zip
+*.tar.gz
+*.rar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-# For mock data 
-*.pyc
-*.pyo
-*.egg-info
-*.mo
-*.pot
-*.log
-*.tmp.*
-*.iml
-.idea/
-*.swp
-__pycache__
-bin
-build
-develop-eggs
-eggs
-parts
-.DS_Store
-.installed.cfg
-docs/_build
-.tox
-.project
-.classpath
-.pydevproject
-
-data/
-venv/
-cover/
-target/
-
-.externalToolBuilders
-.settings
+application.properties
